fix: add placeholder styles for textarea in general.scss to enhance text visibility

--- a/src/sass/general.scss
+++ b/src/sass/general.scss
@@ -2619,6 +2619,15 @@ table {
 	position: relative;
 	width: 90%;
 
+	textarea {
+		&::placeholder {
+			color: inherit;
+			font-weight: 500;
+			opacity: 0.4;
+			letter-spacing: 1px;
+		}
+	}
+
 	.dialog-item-arrow {
 		content: '';
 		position: absolute;
